--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=.67">
+    <meta name="viewport" content="width=device-width, initial-scale=67%">
     <link rel="icon" type="image/x-icon" href="calculator-icon.png">
     <title>Calculator</title>
     <!-- to link the necessary .js and .css files -->
