--- a/index.html
+++ b/index.html
@@ -4,56 +4,66 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=67%">
-    <link rel="icon" type="image/x-icon" href="calculator-icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=0.67">
+    <!-- Favicon for the calculator -->
+    <link rel="icon" type="image/x-icon" href="/calculator-icon.png">
     <title>Calculator</title>
-    <!-- to link the necessary .js and .css files -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- to use a special font provided by google fonts -->
+    <!-- Link to CSS stylesheet -->
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <!-- Link to a special Google font named "Orbitron" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Container for the calculator -->
     <div class="calculator-body">
         <div class="calculator">
+            <!-- Calculator screen to display results -->
             <div class="screen">
                 <p id="display"></p>
             </div>
+            <!-- Table of calculator buttons -->
             <table>
+                <!-- First row of buttons -->
                 <tr id="first-row">
-                    <td><button id="ac">                   AC   </button></td>
-                    <td><button id="onoff">              ON/OFF </button></td>
-                    <td><button class="op" id="square">    ^2   </button></td>
-                    <td><button class="op" id="modulas">    %   </button></td>
+                    <td><button id="ac">      AC   </button></td>
+                    <td><button id="onoff"> ON/OFF </button></td>
+                    <td><button class="op">   ^2   </button></td>
+                    <td><button class="op">    %   </button></td>
                 </tr>
+                <!-- Second row of buttons -->
                 <tr>
-                    <td><button class="num" id="seven">     7   </button></td>
-                    <td><button class="num" id="eight">     8   </button></td>
-                    <td><button class="num" id="nine">      9   </button></td>
-                    <td><button class="op"  id="divide">    /   </button></td>
+                    <td><button class="num">  7  </button></td>
+                    <td><button class="num">  8  </button></td>
+                    <td><button class="num">  9  </button></td>
+                    <td><button class="op" >  /  </button></td>
                 </tr>
+                <!-- Third row of buttons -->
                 <tr>
-                    <td><button class="num" id="four">      4   </button></td>
-                    <td><button class="num" id="five">      5   </button></td>
-                    <td><button class="num" id="six">       6   </button></td>
-                    <td><button class="op"  id="multiply">  *   </button></td>
+                    <td><button class="num">  4  </button></td>
+                    <td><button class="num">  5  </button></td>
+                    <td><button class="num">  6  </button></td>
+                    <td><button class="op" >  *  </button></td>
                 </tr>
+                <!-- Fourth row of buttons -->
                 <tr>
-                    <td><button class="num" id="one">       1   </button></td>
-                    <td><button class="num" id="two">       2   </button></td>
-                    <td><button class="num" id="three">     3   </button></td>
-                    <td><button class="op"  id="subtract">  -   </button></td>
+                    <td><button class="num">  1  </button></td>
+                    <td><button class="num">  2  </button></td>
+                    <td><button class="num">  3  </button></td>
+                    <td><button class="op" >  -  </button></td>
                 </tr>
+                <!-- Fifth row of buttons -->
                 <tr>
-                    <td><button class="num" id="zero">      0   </button></td>
-                    <td><button class="num" id="decimal">   .   </button></td>
-                    <td><button class="op"  id="equals">    =   </button></td>
-                    <td><button class="op"  id="add">       +   </button></td>
+                    <td><button class="num">  0  </button></td>
+                    <td><button class="num">  .  </button></td>
+                    <td><button class="op" >  =  </button></td>
+                    <td><button class="op" >  +  </button></td>
                 </tr>
             </table>
         </div>
     </div>
+    <!-- Footer Section -->
     <div class="footer">
         <p>This Is A Mini-Project Created By
             <a href="https://010101-sans.github.io/" class="link" target="_blank">SANSKAR SURYAWANSHI</a>, 
@@ -61,9 +71,10 @@
             <a href="https://www.lmsintrainz.com/" class="link" target="_blank">INTRAINZ EDUTECH</a>.
             <br><br>The Design Of The Calculator Is Inspired By 
             <a href="https://www.amazon.in/Citizen-LC-210N-Pocket-Calculator/dp/B0065PO8OI" class="link"
-            target="_b">CITIZEN LC-210N Model</a>
+            target="_blank">CITIZEN LC-210N Model</a>
         </p>
     </div>
+    <!-- Link to Javascript -->    
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
