--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <!-- Footer Section -->
-    <div class="footer">
+    <footer class="footer">
         <p>This Is A Mini-Project Created By
             <a href="https://010101-sans.github.io/" class="link" target="_blank">SANSKAR SURYAWANSHI</a>, 
             <br>As Part Of An Assignment Given By 
@@ -73,7 +73,7 @@
             <a href="https://www.amazon.in/Citizen-LC-210N-Pocket-Calculator/dp/B0065PO8OI" class="link"
             target="_blank">CITIZEN LC-210N Model</a>
         </p>
-    </div>
+    </footer>
     <!-- Link to Javascript -->    
     <script type="text/javascript" src="script.js"></script>
 </body>
